fixed alignment design issues in PD & schedule screens
git-svn-id: https://xcmetadataservicestoolkit.googlecode.com/svn/trunk@429 72d1a826-0e72-11de-b5bf-434079a3519f

--- a/src/webapps/MetadataServicesToolkit/page-resources/css/header.css
+++ b/src/webapps/MetadataServicesToolkit/page-resources/css/header.css
@@ -72,9 +72,9 @@ project
     border-top-style:solid;
     border-width:1px;
     border-color:#ced2d5;
-    padding-left:200px;
+    padding-left:25px;
     margin-bottom:10px;
-    margin-top:10px;
+    margin-top:15px;
 }
 
 .greybody
